@@ -6,6 +6,12 @@ Maintenance
 
 * Prevent the leak of the full path of the source files in the binaries
 
+REST API
+--------
+
+* API version upgraded to 22
+* Added a route to delete completed jobs from history: DELETE /jobs/{id}
+
 
 Version 1.12.1 (2023-07-04)
 ===========================
